--- a/app/src/main/res/layout/activity_historique.xml
+++ b/app/src/main/res/layout/activity_historique.xml
@@ -6,64 +6,240 @@
     android:layout_height="match_parent"
     tools:context=".Historique">
 
-    <LinearLayout
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="109dp">
+    <RelativeLayout
+        android:layout_width="391dp"
+        android:layout_height="698dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="152dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Jeu 1 :"
-            android:textColor="#9C27B0"
-            android:textSize="20sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="336dp"
+            android:orientation="horizontal"
+            android:translationX="0sp">
 
-        <TextView
-            android:id="@+id/myRecord"
-            android:layout_width="127dp"
-            android:layout_height="match_parent"
-            android:text="0"
-            android:textAlignment="center"
-            android:textColor="#9C27B0"
-            android:textSize="20sp" />
+            <LinearLayout
+                android:layout_width="98dp"
+                android:layout_height="314dp"
+                android:orientation="vertical"
+                android:translationX="20sp"
+                android:translationY="60sp">
 
-        <TextView
-            android:id="@+id/opponentRecord"
-            android:layout_width="127dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="0"
-            android:textAlignment="center"
-            android:textColor="#9C27B0"
-            android:textSize="20sp" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Jeu 1 :"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp" />
 
-    <TextView
-        android:layout_width="103dp"
-        android:layout_height="18dp"
-        android:text="Record personnel"
-        android:textColor="#9C27B0"
-        android:textSize="14sp"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="77dp" />
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Jeu 2 :"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="20sp" />
 
-    <TextView
-        android:layout_width="79dp"
-        android:layout_height="18dp"
-        android:text="Record tous"
-        android:textColor="#9C27B0"
-        android:textSize="14sp"
-        tools:layout_editor_absoluteX="273dp"
-        tools:layout_editor_absoluteY="66dp" />
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Jeu 3 :"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="40sp" />
 
-    <TextView
-        android:layout_width="131dp"
-        android:layout_height="23dp"
-        android:text="adversaires confondus"
-        android:textColor="#9C27B0"
-        android:textSize="14sp"
-        tools:layout_editor_absoluteX="246dp"
-        tools:layout_editor_absoluteY="86dp" />
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Jeu 4 :"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="60sp" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Jeu 5 :"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="80sp" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Jeu 6 :"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="100sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="108dp"
+                android:layout_height="314dp"
+                android:orientation="vertical"
+                android:translationX="20sp"
+                android:translationY="20sp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Record personnel"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/myRecordJeu1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="4sp" />
+
+                <TextView
+                    android:id="@+id/myRecordJeu2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="24sp" />
+
+                <TextView
+                    android:id="@+id/myRecordJeu3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="44sp" />
+
+                <TextView
+                    android:id="@+id/myRecordJeu4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="64sp" />
+
+                <TextView
+                    android:id="@+id/myRecordJeu5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="84sp" />
+
+                <TextView
+                    android:id="@+id/myRecordJeu6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="104sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:translationX="20sp"
+                android:translationY="14sp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Record tous"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="158dp"
+                    android:layout_height="23dp"
+                    android:text="adversaires confondus"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/opponentRecordJeu1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="4sp" />
+
+                <TextView
+                    android:id="@+id/opponentRecordJeu2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="24sp" />
+
+                <TextView
+                    android:id="@+id/opponentRecordJeu3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="44sp" />
+
+                <TextView
+                    android:id="@+id/opponentRecordJeu4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="64sp" />
+
+                <TextView
+                    android:id="@+id/opponentRecordJeu5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="84sp" />
+
+                <TextView
+                    android:id="@+id/opponentRecordJeu6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#"
+                    android:textAlignment="center"
+                    android:textColor="#7F00FF"
+                    android:textSize="20sp"
+                    android:translationY="104sp" />
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
