--- a/app/src/main/res/layout/activity_jeu5.xml
+++ b/app/src/main/res/layout/activity_jeu5.xml
@@ -60,95 +60,95 @@
 
     <Button
         android:id="@+id/btn_0"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="#413F43"
         android:textSize="60sp"
         android:textStyle="bold"
-        android:backgroundTint="#413F43"
-        app:layout_constraintTop_toBottomOf="@+id/playerStatus"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="15dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/playerStatus" />
 
     <Button
         android:id="@+id/btn_1"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:backgroundTint="#413F43"
         android:textSize="60sp"
         android:textStyle="bold"
-        android:backgroundTint="#413F43"
-        app:layout_constraintTop_toTopOf="@+id/btn_0"
-        app:layout_constraintLeft_toRightOf="@+id/btn_0"/>
+        app:layout_constraintLeft_toRightOf="@+id/btn_0"
+        app:layout_constraintTop_toTopOf="@+id/btn_0" />
 
     <Button
         android:id="@+id/btn_2"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:backgroundTint="#413F43"
         android:textSize="60sp"
         android:textStyle="bold"
-        android:backgroundTint="#413F43"
-        app:layout_constraintTop_toTopOf="@+id/btn_1"
-        app:layout_constraintLeft_toRightOf="@+id/btn_1"/>
+        app:layout_constraintLeft_toRightOf="@+id/btn_1"
+        app:layout_constraintTop_toTopOf="@+id/btn_1" />
 
     <Button
         android:id="@+id/btn_3"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:backgroundTint="#413F43"
         android:textSize="60sp"
         android:textStyle="bold"
-        android:backgroundTint="#413F43"
-        app:layout_constraintTop_toBottomOf="@+id/btn_0"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_0"/>
+        app:layout_constraintLeft_toLeftOf="@+id/btn_0"
+        app:layout_constraintTop_toBottomOf="@+id/btn_0" />
 
     <Button
         android:id="@+id/btn_4"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:backgroundTint="#413F43"
         android:textSize="60sp"
         android:textStyle="bold"
-        android:backgroundTint="#413F43"
-        app:layout_constraintTop_toTopOf="@+id/btn_3"
-        app:layout_constraintLeft_toRightOf="@+id/btn_3"/>
+        app:layout_constraintLeft_toRightOf="@+id/btn_3"
+        app:layout_constraintTop_toTopOf="@+id/btn_3" />
 
     <Button
         android:id="@+id/btn_5"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:backgroundTint="#413F43"
         android:textSize="60sp"
         android:textStyle="bold"
-        android:backgroundTint="#413F43"
-        app:layout_constraintTop_toTopOf="@+id/btn_4"
-        app:layout_constraintLeft_toRightOf="@+id/btn_4"/>
+        app:layout_constraintLeft_toRightOf="@+id/btn_4"
+        app:layout_constraintTop_toTopOf="@+id/btn_4" />
 
     <Button
         android:id="@+id/btn_6"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:backgroundTint="#413F43"
         android:textSize="60sp"
         android:textStyle="bold"
-        android:backgroundTint="#413F43"
-        app:layout_constraintTop_toBottomOf="@+id/btn_3"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_3"/>
+        app:layout_constraintLeft_toLeftOf="@+id/btn_3"
+        app:layout_constraintTop_toBottomOf="@+id/btn_3" />
 
     <Button
         android:id="@+id/btn_7"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:backgroundTint="#413F43"
         android:textSize="60sp"
         android:textStyle="bold"
-        android:backgroundTint="#413F43"
-        app:layout_constraintTop_toTopOf="@+id/btn_6"
-        app:layout_constraintLeft_toRightOf="@+id/btn_6"/>
+        app:layout_constraintLeft_toRightOf="@+id/btn_6"
+        app:layout_constraintTop_toTopOf="@+id/btn_6" />
 
     <Button
         android:id="@+id/btn_8"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:backgroundTint="#413F43"
         android:textSize="60sp"
         android:textStyle="bold"
-        android:backgroundTint="#413F43"
-        app:layout_constraintTop_toTopOf="@+id/btn_7"
-        app:layout_constraintLeft_toRightOf="@+id/btn_7"/>
+        app:layout_constraintLeft_toRightOf="@+id/btn_7"
+        app:layout_constraintTop_toTopOf="@+id/btn_7" />
 
     <Button
         android:id="@+id/reserGame"
