--- a/app/src/main/res/layout/activity_p2_p.xml
+++ b/app/src/main/res/layout/activity_p2_p.xml
@@ -38,36 +38,29 @@
         android:layout_marginTop="40dp"
         android:background="@color/teal_200"/>
 
-    <TextView
-        android:id="@+id/messageTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Message"
-        android:textAlignment="center"/>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/editTextTypeMsg"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/sendButton"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <ImageButton
-            android:id="@+id/sendButton"
+        <Button
+            android:id="@+id/playButton"
+            android:text="Play"
+            android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/editTextTypeMsg"
+            android:layout_marginEnd="160dp"
+            android:background="@color/purple_200"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_send"/>
+            tools:layout_editor_absoluteY="86dp"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            tools:layout_editor_absoluteX="183dp"
+            tools:layout_editor_absoluteY="217dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
