--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -4,15 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Scrore">
+    tools:context=".Score">
 
     <RelativeLayout
         android:layout_width="391dp"
         android:layout_height="698dp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="152dp">
-
-
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -21,13 +19,13 @@
             android:translationX="100sp"
             android:translationY="60sp">
 
-        <TextView
-            android:id="@+id/Joueur1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Joueur 1 :"
-            android:textColor="#7F00FF"
-            android:textSize="20sp" />
+            <TextView
+                android:id="@+id/Joueur1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Joueur 1 :"
+                android:textColor="#7F00FF"
+                android:textSize="20sp" />
             <TextView
                 android:id="@+id/Joueur2"
                 android:layout_width="match_parent"
