--- a/app/src/main/res/layout/activity_score1.xml
+++ b/app/src/main/res/layout/activity_score1.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Score">
+    tools:context=".Score1">
 
     <RelativeLayout
         android:layout_width="391dp"
         android:layout_height="698dp"
         tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="152dp">
+        tools:layout_editor_absoluteY="152dp"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
-            android:layout_width="231dp"
-            android:layout_height="337dp"
+            android:layout_width="234dp"
+            android:layout_height="429dp"
             android:orientation="vertical"
-            android:translationX="100sp"
+            android:translationX="70sp"
             android:translationY="60sp">
 
             <TextView
@@ -58,13 +59,40 @@
 
             <Button
                 android:id="@+id/menu"
-                android:layout_width="233dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#00FFFF"
                 android:text="Menu Principal"
                 android:textColor="@color/white"
                 android:translationY="180sp" />
 
+            <Button
+                android:id="@+id/actualiser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#00FFFF"
+                android:text="Actualiser"
+                android:textColor="@color/white"
+                android:translationY="200sp" />
+
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/winner"
+            android:layout_width="82dp"
+            android:layout_height="87dp"
+            android:translationX="150dp"
+            android:translationY="530dp"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/kisspng_emoji_sunglasses_sunglasses_emoji_transparent_background_5a73fcd9678819_2991357115175508094241" />
+
+        <ImageView
+            android:id="@+id/loser"
+            android:layout_width="82dp"
+            android:layout_height="87dp"
+            android:translationX="150dp"
+            android:translationY="530dp"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/kisspng_pile_of_poo_emoji_feces_t_shirt_sticker_poop_png_emoji_island_5ab1c1e2bb72a3_8689958815215989467678" />
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
